# retinify-viewer

./: .gitignore  CMakeLists.txt  NOTICE.md  README.md
.github/workflows/: build.yaml
include/retinify/: viewer.hpp
sample/: CMakeLists.txt  main.cpp
src/: viewer.cpp
